[package]
name = "chitose"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "gzip",
] }
toml = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libmll = { version = "*", path = "../mll" }
tokio = { version = "1", features = ["rt-multi-thread"] }
