[package]
name = "chitose"
version = "0.1.0"
edition = "2024"


[features]
default =[]


[dependencies]
reqwest = { version = "0.12", default-features = false, features = [
  "rustls-tls",
  "cookies",
  "gzip",
] }
toml = { version = "0.8" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }


[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
strip = true
panic = 'abort'
incremental = false
overflow-checks = false
